--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ yarn-debug.log
 # Ignore Docker option files
 docker-compose.override.yml
 
+# Ignore master key for decrypting credentials and more.
+/config/master.key
